Updating D2E Peril list.

--- a/content/D2E/base/perils.ini
+++ b/content/D2E/base/perils.ini
@@ -1,29 +1,35 @@
-; PerilMinor1 unsure
+; PerilMinor1 unsure about PERIL_MINOR_1_2, PERIL_MINOR_1_1
+[PerilMinor1]
+text={ffg:PERIL_MINOR_1_RULES}
+operations=perilMinor,=,0
 
 [PerilMinor22H]
 text={ffg:PERIL_MINOR_2_RULES_2HERO}
-vars=#heroes,==,2 perilMinor,=,0
+conditions=#heroes,==,2
+operations=perilMinor,=,0
 
 [PerilMinor23H]
 text={ffg:PERIL_MINOR_2_RULES_3HERO}
-vars=#heroes,==,3 perilMinor,=,0
+conditions=#heroes,==,3
+operations=perilMinor,=,0
 
 [PerilMinor24H]
 text={ffg:PERIL_MINOR_2_RULES_4HERO}
-vars=#heroes,==,4 perilMinor,=,0
+conditions=#heroes,==,4
+operations=perilMinor,=,0
 
 [PerilMinor3]
 text={ffg:PERIL_MINOR_3_RULES}
-vars=perilMinor,=,0
+operations=perilMinor,=,0
 
 [PerilMinor4]
 text={ffg:PERIL_MINOR_4_RULES}
-vars=perilMinor,=,0
+operations=perilMinor,=,0
 ; fixme PERIL_MINOR_4_TIMER?
 
 [PerilMinor5]
 text={ffg:PERIL_MINOR_5_RULES}
-vars=perilMinor,=,0
+operations=perilMinor,=,0
 ; fixme PERIL_MINOR_5_TIMER?
 
 ; There is no minor6??
@@ -33,24 +39,56 @@ vars=perilMinor,=,0
 ;text={ffg:PERIL_MINOR_7_RULES}
 ;PERIL_MINOR_7_CHECK/PERIL_MINOR_7_TIMER don't seem to be used
 
+
 ;fixme add zombies
 ;[PerilMinor8]
 ;text={ffg:PERIL_MINOR_8_RULES}
 ; fixme PERIL_MINOR_8_TIMER?
 
+; 9 places a fire imp
+
+; Weakened required
+[PerilMinor10]
+text={ffg:PERIL_MINOR_10_RULES:{0}:{rnd:hero}}
+operations=perilMinor,=,0
+conditions=#TT,>,0
+
+[PerilMinor11]
+text={ffg:PERIL_MINOR_11_RULES}
+conditions=#SoN,>,0
+operations=perilMinor,=,0 perilMinor11,=,1
+
+[PerilMinor11NextNoTT]
+text={ffg:PERIL_MINOR_11_CONT:{0}:Immobilized}
+conditions=perilMinor11,>,0 #TT,==,0
+operations=perilMinor11,=,0
+trigger=EndRound
+
+[PerilMinor11NextTT]
+text={ffg:PERIL_MINOR_11_CONT:{0}:Weakened}
+conditions=perilMinor11,>,0 #TT,>,0
+operations=perilMinor11,=,0
+trigger=EndRound
+
+[PerilMinor12]
+text={ffg:PERIL_MINOR_12_RULES:{0}:{rnd:hero}}
+conditions=#MoR,>,0 #MoB,>,0
+operations=perilMinor,=,0
+
 ; I don't think this is actually in the game?
 [PerilMinor13]
 text={ffg:PERIL_MINOR_13_RULES:{0}:{rnd:hero}}
-vars=perilMinor,=,0
+operations=perilMinor,=,0
 
 [PerilMajor1]
 text={ffg:PERIL_MAJOR_1_RULES}
-vars=#monsters,>,0 perilMajor,=,0
+conditions=#monsters,>,0
+operations=perilMajor,=,0
 
 ; replace {0} with damage (how much?)
 [PerilMajor2]
 text={ffg:PERIL_MAJOR_2_RULES:{0}:{rnd:2:4}}
-vars=perilMajor,=,0
+operations=perilMajor,=,0
 
 ; 1 is random? monster
 ;[PerilMajor3]
@@ -58,7 +96,7 @@ vars=perilMajor,=,0
 
 [PerilMajor4]
 text={ffg:PERIL_MAJOR_4_RULES}
-vars=perilMajor,=,0
+operations=perilMajor,=,0
 
 ; PERIL_MAJOR_5_ENDRND not used?
 ; add goblins
@@ -72,14 +110,14 @@ vars=perilMajor,=,0
 ;text={ffg:PERIL_MAJOR_7_RULES}
 ; what about PERIL_MAJOR_7_RETREAT PERIL_MAJOR_7_REAPPEAR PERIL_MAJOR_7_DEFEATED?
 
-; add shadow dragon, fleshmoulder
+; add shadow dragon, fleshmoulders
 ;[PerilMajor8]
 ;text={ffg:PERIL_MAJOR_8_RULES}
 ; what about PERIL_MAJOR_8_REINFORCEMENT?
 
 [PerilMajor9]
 text={ffg:PERIL_MAJOR_9_RULES}
-vars=perilMajor,=,0
+operations=perilMajor,=,0
 
 ; I don't know?
 ;PERIL_MAJOR_10_RULES,"[u]Major Peril: Blood for Blood[/u]\n\n[i]An elderly figure watches from the darkness, flitting from shadow to shadow. Time and time again, just as you forget he is there, he screams out: ""Blood for blood, blood for blood!""[/i]\n\n"
@@ -89,45 +127,46 @@ vars=perilMajor,=,0
 
 [PerilMajor11]
 text={ffg:PERIL_MAJOR_11_RULES}
-vars=perilMajor,=,0
+operations=perilMajor,=,0
 
 ; 0 to damage (maybe 7?)
 [PerilDeadly1]
 text={ffg:PERIL_DEADLY_1_RULES:{0}:{rnd:7:7}}
-vars=perilDeadly,=,0
+operations=perilDeadly,=,0
 
 [PerilDeadly2]
 text={ffg:PERIL_DEADLY_2_RULES}
-vars=perilDeadly,=,0 perilDeadly2Count,=,1 
+operations=perilDeadly,=,0 perilDeadly2Count,=,1
 
 [PerilD22]
 text={ffg:PERIL_DEADLY_2_2}
-vars=perilDeadly2Count,==,1 perilDeadly2Count,=,2
+conditions=perilDeadly2Count,==,1
+operations=perilDeadly2Count,=,2
 trigger=EndRound
 
 ; Should we force end here? RtL doesn't
 [PerilD2End]
 text={ffg:PERIL_DEADLY_2_END}
-vars=perilDeadly2Count,==,2
+conditions=perilDeadly2Count,==,2
 trigger=EndRound
 
 [PerilMinorPool]
-event1=PerilMinor22H PerilMinor23H  PerilMinor24H PerilMinor3 PerilMinor4 PerilMinor5 PerilMinor13
+event1=PerilMinor1 PerilMinor22H PerilMinor23H PerilMinor24H PerilMinor3 PerilMinor4 PerilMinor5 PerilMinor10 PerilMinor11 PerilMinor12 PerilMinor13
 button1="Continue"
 randomevents=true
-vars=perilMinor,>,0
+conditions=perilMinor,>,0
 trigger=EndRound
 
 [PerilMajorPool]
 event1=PerilMajor1 PerilMajor2 PerilMajor4 PerilMajor9 PerilMajor11
 button1="Continue"
 randomevents=true
-vars=perilMajor,>,0
+conditions=perilMajor,>,0
 trigger=EndRound
 
 [PerilDeadlyPool]
 event1=PerilDeadly1 PerilDeadly2
 button1="Continue"
 randomevents=true
-vars=perilDeadly,>,0
+conditions=perilDeadly,>,0
 trigger=EndRound
