--- a/content/MoM/base/mythos.ini
+++ b/content/MoM/base/mythos.ini
@@ -335,7 +335,7 @@ event1=PerilCrazyElegantFloors02
 button1="Resolve Event"
 event2=
 button2="No Effect"
-conditions=mythosMajor,>,0 mythosBallroom
+conditions=mythosMajor,>,0 mythosBallroom,>,0
 
 [PerilCrazyElegantFloors02]
 text={ffg:MYTHOS_EVENT_CRAZY_ELEGANT_FLOORS_02:{0}:{rnd:hero}}
@@ -1796,7 +1796,6 @@ conditions=mythosMinor,>,0 mythosUnfinished,>,0
 
 [PerilStaleAir2]
 text={ffg:MYTHOS_EVENT_STALE_AIR_2:{0}:{rnd:hero}}
-conditions=mythos
 event1=
 button1="Continue"
 
@@ -2376,7 +2375,7 @@ event1=PerilDruggedUp02
 button1="Resolve Event"
 event2=
 button2="No Effect"
-conditions=mythosDeadly,>,0 #BtT,>,0 mythosHallStairs
+conditions=mythosDeadly,>,0 #BtT,>,0 mythosHallStairs,>,0
 
 [PerilDruggedUp02]
 text={ffg:MYTHOS_EVENT_DRUGGED_UP_02:{0}:{rnd:hero}}
