--- a/content/D2E/base/perils.ini
+++ b/content/D2E/base/perils.ini
@@ -1,6 +1,6 @@
 ; PerilMinor1 unsure about PERIL_MINOR_1_2, PERIL_MINOR_1_1
 [PerilMinor1]
-text={ffg:PERIL_MINOR_1_RULES}
+text={ffg:PERIL_MINOR_1_RULES:{0}:{rnd:hero}}
 operations=perilMinor,=,0
 
 [PerilMinor22H]
