Changing to american civilized.

--- a/content/D2E/h&m/soe/monsters.ini
+++ b/content/D2E/h&m/soe/monsters.ini
@@ -11,7 +11,7 @@ traits=melee cave cold massive
 name="Dark Minotaur"
 image="../../ffg/img/Monster_DarkMinotaur.dds"
 info={ffg:DARK_MINOTAUR_INSTRUCTION}
-traits=melee cursed civilised small
+traits=melee cursed civilized small
 ; fixme unknown?
 ;activation=Range1 Range2 Range3
 
