--- a/content/D2E/h&m/god/monsters.ini
+++ b/content/D2E/h&m/god/monsters.ini
@@ -11,7 +11,7 @@ traits=ranged cursed dark massive
 name="Dark Priest"
 image="../../ffg/img/Monster_DarkPriest.dds"
 info={ffg:INSTRUCTION_DARK_PRIEST}
-traits=ranged civilised cursed small
+traits=ranged civilized cursed small
 ; fixme unknown?
 ;activation=Range1 Range2 Range3
 
