FInished adding CK heroes.

--- a/content/D2E/ck/heroes/heroes1e.ini
+++ b/content/D2E/ck/heroes/heroes1e.ini
@@ -111,3 +111,9 @@ name="Landrec the Wise"
 image="img/Landrec.png"
 archetype=mage
 traits=male
+
+[HeroBogranTheShadow]
+name="Bogran the Shadow"
+image="img/BogranTheShadow.png"
+archetype=scout
+traits=male
