--- a/content/D2E/ck/heroes/heroesDQ.ini
+++ b/content/D2E/ck/heroes/heroesDQ.ini
@@ -28,6 +28,8 @@ image="../../ffg/img/Hero_Tatianna.dds"
 archetype=scout
 traits=female
 
-; FIXME
-; Hugo the Glorious
-; Warrior
+[HeroHugoTheGlorious]
+; name="Hugo the Glorious"
+image="img/HugoTheGlorious.png"
+archetype=warrior
+traits=male
