--- a/content/D2E/ck/heroes/heroesPromo.ini
+++ b/content/D2E/ck/heroes/heroesPromo.ini
@@ -16,6 +16,8 @@ image="../../ffg/img/Hero_SeerKel.dds"
 archetype=mage
 traits=female
 
-; FIXME
-; Tobin Farslayer
-; Scout
+[HeroTobinFarslayer]
+name="Tobin Farslayer"
+image="img/TobinFarslayer.png"
+archetype=scout
+traits=male
