--- a/content/D2E/ck/heroes/heroesToI.ini
+++ b/content/D2E/ck/heroes/heroesToI.ini
@@ -28,6 +28,8 @@ image="../../ffg/img/Hero_Karnon.dds"
 archetype=warrior
 traits=male
 
-; Todo
-; Laughin Baldar
-; Warrior
+[HeroLaughinBuldar]
+; name="Laughin Buldar"
+image="img/LaughinBuldar.png"
+archetype=warrior
+traits=male
