--- a/content/D2E/ck/heroes/heroesAoD.ini
+++ b/content/D2E/ck/heroes/heroesAoD.ini
@@ -16,12 +16,17 @@ image="../../ffg/img/Hero_Sahla.dds"
 archetype=healer
 traits=male
 
-; FIXME
-; Aurim
-; Healer
+[HeroAurim]
+image="img/Aurim.png"
+archetype=healer
+traits=male
 
-; Eliam
-; Warrior
+[HeroEliam]
+image="img/Eliam.png"
+archetype=warrior
+traits=male
 
-; Kirga
-; Scout
+[HeroKirga]
+image="img/Kirga.png"
+archetype=scout
+traits=male
