--- a/content/MoM/base/audio.ini
+++ b/content/MoM/base/audio.ini
@@ -1,5 +1,31 @@
 [AudioMenu]
 file="../ffg/audio/MainMenu_01.ogg"
+menu=true
 
-[AudioQuest]
+[AudioAtmosphere1]
 file="../ffg/audio/GameViewAtmosphere_01.ogg"
+quest=true
+
+[AudioAtmosphere2]
+file="../ffg/audio/GameViewAtmosphere_02.ogg"
+quest=true
+
+[AudioAtmosphere3]
+file="../ffg/audio/GameViewAtmosphere_03.ogg"
+quest=true
+
+[AudioAtmosphere4]
+file="../ffg/audio/GameViewAtmosphere_04.ogg"
+quest=true
+
+[AudioAtmosphere5]
+file="../ffg/audio/GameViewAtmosphere_05.ogg"
+quest=true
+
+[AudioAtmosphere6]
+file="../ffg/audio/GameViewAtmosphere_06.ogg"
+quest=true
+
+[AudioAtmosphere7]
+file="../ffg/audio/GameViewAtmosphere_07.ogg"
+quest=true
