Further audio improvements.

--- a/content/D2E/base/audio.ini
+++ b/content/D2E/base/audio.ini
@@ -1,34 +1,34 @@
 [AudioMenu]
 file="../ffg/audio/TitlescreenMusic_01.ogg"
-menu=true
+traits=menu music
 
 [AudioSetup]
 file="../ffg/audio/Setup_01.ogg"
-menu=true
+traits=menu music
 
 [AudioForestNight]
 file="../ffg/audio/ForestNight_01.ogg"
-quest=true
+traits=quest music
 
 [AudioForestDay]
 file="../ffg/audio/ForestDay_01.ogg"
-quest=true
+traits=quest music
 
 [AudioInside]
 file="../ffg/audio/Inside_01.ogg"
-quest=true
+traits=quest music
 
 [AudioMountains]
 file="../ffg/audio/Mountains_01.ogg"
-quest=true
+traits=quest music
 
 [AudioNature]
 file="../ffg/audio/Nature_01.ogg"
-quest=true
+traits=quest music
 
 [AudioOutdoors]
 file="../ffg/audio/QuestOutdoors_01.ogg"
-quest=true
+traits=quest music
 
 [AudioSelect]
 file="../ffg/audio/Select_01.ogg"
