Able to pick puzzle images from quest directory.

--- a/content/MoM/base/mythos.ini
+++ b/content/MoM/base/mythos.ini
@@ -2645,3 +2645,4 @@ event1=PerilActionHeroRoll01Street PerilActionHeroRoll01Alley PerilAloneWithYour
 button1="Continue"
 randomevents=true
 trigger=Mythos
+audio=AudioMythos
