--- a/content/D2E/h&m/botw/monsters.ini
+++ b/content/D2E/h&m/botw/monsters.ini
@@ -14,6 +14,7 @@ info={ffg:INSTRUCTION_HELLHOUND}
 traits=melee hot cursed medium
 ; fixme unknown?
 ;activation=Range1 Range2 Range3
+priority=1
 
 [MonsterDeepElf]
 ; name=""
