--- a/content/D2E/h&m/cotf/monsters.ini
+++ b/content/D2E/h&m/cotf/monsters.ini
@@ -21,3 +21,4 @@ info={ffg:INSTRUCTION_SORCERER}
 traits=ranged civilized building small
 ; fixme unknown?
 ;activation=Range1 Range2 Range3
+priority=1
