--- a/content/D2E/h&m/vod/activations.ini
+++ b/content/D2E/h&m/vod/activations.ini
@@ -4,11 +4,13 @@ ability={ffg:EFFECT_MANTICORE_1}
 minion={ffg:MANTICORE_1_MINION_0}
 master={ffg:MANTICORE_1_MASTER_0}
 
+; fixme minion first?
 [MonsterActivationManticore2]
 ability={ffg:EFFECT_MANTICORE_2}
 minion={ffg:MANTICORE_2_MINION_0}
 master={ffg:MANTICORE_2_MASTER_0}
 
+; fixme minion first?
 [MonsterActivationManticore3]
 ability={ffg:EFFECT_MANTICORE_3}
 minion={ffg:MANTICORE_3_MINION_0}
@@ -19,18 +21,21 @@ master={ffg:MANTICORE_3_MASTER_0}
 ability={ffg:EFFECT_OGRE_1}
 minion={ffg:OGRE_1_MINION_0}
 master={ffg:OGRE_1_MASTER_0}
+priority=1
 
 ; fixme minion first?
 [MonsterActivationOgre2]
 ability={ffg:EFFECT_OGRE_2}
 minion={ffg:OGRE_2_MINION_0}
 master={ffg:OGRE_2_MASTER_0}
+priority=1
 
 ; fixme minion first?
 [MonsterActivationOgre3]
 ability={ffg:EFFECT_OGRE_3}
 minion={ffg:OGRE_3_MINION_0}
 master={ffg:OGRE_3_MASTER_0}
+priority=1
 
 ; fixme minion first?
 [MonsterActivationTroll1]
