Fixing activation priority.

--- a/content/D2E/h&m/sots/activations.ini
+++ b/content/D2E/h&m/sots/activations.ini
@@ -39,15 +39,18 @@ master={ffg:BLOOD_APE_3_MASTER_0}
 ability={ffg:EFFECT_NAGA_1}
 minion={ffg:NAGA_1_MINION_0}
 master={ffg:NAGA_1_MASTER_0}
+priority=1
 
 ; fixme minion first?
 [MonsterActivationNaga2]
 ability={ffg:EFFECT_NAGA_2}
 minion={ffg:NAGA_2_MINION_0}
 master={ffg:NAGA_2_MASTER_0}
+priority=1
 
 ; fixme minion first?
 [MonsterActivationNaga3]
 ability={ffg:EFFECT_NAGA_3}
 minion={ffg:NAGA_3_MINION_0}
 master={ffg:NAGA_3_MASTER_0}
+priority=1
