Adding ToI monsters.

--- a/content/D2E/h&m/soe/monsters.ini
+++ b/content/D2E/h&m/soe/monsters.ini
@@ -6,6 +6,7 @@ info={ffg:INSTRUCTION_ICE_WYRM}
 traits=melee cave cold massive
 ; fixme unknown?
 ;activation=Range1 Range2 Range3
+priority=1
 
 [MonsterDarkMinotaur]
 name="Dark Minotaur"
@@ -14,6 +15,7 @@ info={ffg:DARK_MINOTAUR_INSTRUCTION}
 traits=melee cursed civilized small
 ; fixme unknown?
 ;activation=Range1 Range2 Range3
+priority=1
 
 [MonsterShade]
 ; name=""
@@ -22,3 +24,4 @@ info={ffg:INSTRUCTION_SHADE}
 traits=melee cursed cold small
 ; fixme unknown?
 ;activation=Range1 Range2 Range3
+priority=1
