Adding AoD monsters.

--- a/content/D2E/h&m/sots/monsters.ini
+++ b/content/D2E/h&m/sots/monsters.ini
@@ -15,6 +15,7 @@ info={ffg:INSTRUCTION_BLOOD_APE}
 traits=melee hot cave medium
 ; fixme unknown?
 ;activation=Range1 Range2 Range3
+priority=1
 
 [MonsterNaga]
 ; name=""
