--- a/content/D2E/h&m/vod/activations.ini
+++ b/content/D2E/h&m/vod/activations.ini
@@ -42,15 +42,18 @@ priority=1
 ability={ffg:EFFECT_TROLL_1}
 minion={ffg:TROLL_1_MINION_0}
 master={ffg:TROLL_1_MASTER_0}
+priority=1
 
 ; fixme minion first?
 [MonsterActivationTroll2]
 ability={ffg:EFFECT_TROLL_2}
 minion={ffg:TROLL_2_MINION_0}
 master={ffg:TROLL_2_MASTER_0}
+priority=1
 
 ; fixme minion first?
 [MonsterActivationTroll3]
 ability={ffg:EFFECT_TROLL_3}
 minion={ffg:TROLL_3_MINION_0}
 master={ffg:TROLL_3_MASTER_0}
+priority=1
