Adding WoD Monsters.

--- a/content/D2E/h&m/botw/monsters.ini
+++ b/content/D2E/h&m/botw/monsters.ini
@@ -5,6 +5,7 @@ info={ffg:INSTRUCTION_KOBOLD}
 traits=melee cave building small
 ; fixme unknown?
 ;activation=Range1 Range2 Range3
+priority=1
 
 [MonsterHellhound]
 ; name=""
