--- a/content/D2E/h&m/sots/activations.ini
+++ b/content/D2E/h&m/sots/activations.ini
@@ -3,18 +3,21 @@
 ability={ffg:EFFECT_FERROX_1}
 minion={ffg:FERROX_1_MINION_0}
 master={ffg:FERROX_1_MASTER_0}
+priority=1
 
 ; fixme minion first?
 [MonsterActivationFerrox2]
 ability={ffg:EFFECT_FERROX_2}
 minion={ffg:FERROX_2_MINION_0}
 master={ffg:FERROX_2_MASTER_0}
+priority=1
 
 ; fixme minion first?
 [MonsterActivationFerrox3]
 ability={ffg:EFFECT_FERROX_3}
 minion={ffg:FERROX_3_MINION_0}
 master={ffg:FERROX_3_MASTER_0}
+priority=1
 
 ; fixme minion first?
 [MonsterActivationBloodApe1]
