--- a/content/D2E/h&m/sots/monsters.ini
+++ b/content/D2E/h&m/sots/monsters.ini
@@ -5,6 +5,7 @@ info={ffg:INSTRUCTION_FERROX}
 traits=melee cave water small
 ; fixme unknown?
 ;activation=Range1 Range2 Range3
+priority=1
 
 [MonsterBloodApe]
 name="Blood Ape"
