Classifying all D2E content packs.

--- a/content/D2E/boxed/lotw/content_pack.ini
+++ b/content/D2E/boxed/lotw/content_pack.ini
@@ -3,6 +3,7 @@ name=Lair of the Wyrm
 description=Lair of the Wyrm expansion for Descent: Journeys in the Dark Second Edition
 image="../../ffg/img/DJ03_LairOfTheWyrm.dds"
 id=LotW
+type=box
 
 [ContentPackData]
 heros.ini
