--- a/content/D2E/boxed/mob/content_pack.ini
+++ b/content/D2E/boxed/mob/content_pack.ini
@@ -3,6 +3,7 @@ name=Mists of Bilehall
 description=Mists of Bilehall expansion for Descent: Journeys in the Dark Second Edition
 image="../../ffg/img/DJ40_MistsOfBilehall.dds"
 id=MoB
+type=box
 
 [ContentPackData]
 tiles.ini
