--- a/content/D2E/boxed/mor/content_pack.ini
+++ b/content/D2E/boxed/mor/content_pack.ini
@@ -3,6 +3,7 @@ name=Manor of Ravens
 description=Manor of Ravens expansion for Descent: Journeys in the Dark Second Edition
 image="../../ffg/img/DJ21_ManorOfRavens.dds"
 id=MoR
+type=box
 
 [ContentPackData]
 heros.ini
