--- a/content/D2E/boxed/son/content_pack.ini
+++ b/content/D2E/boxed/son/content_pack.ini
@@ -3,6 +3,7 @@ name=Shadow of Nerekhall
 description=Shadow of Nerekhall expansion for Descent: Journeys in the Dark Second Edition
 image="../../ffg/img/DJ07_ShadowOfNerekhall.dds"
 id=SoN
+type=box
 
 [ContentPackData]
 heros.ini
