--- a/content/D2E/h&m/cod/content_pack.ini
+++ b/content/D2E/h&m/cod/content_pack.ini
@@ -3,6 +3,7 @@ name=Crown of Destiny
 description=Crown of Destiny Hero and Monster Collection for Descent: Journeys in the Dark Second Edition
 image="../../ffg/img/DJ27_CrownOfDestiny.dds"
 id=CoD
+type=hm
 
 [ContentPackData]
 heros.ini
