--- a/content/D2E/h&m/sots/content_pack.ini
+++ b/content/D2E/h&m/sots/content_pack.ini
@@ -3,6 +3,7 @@ name=Stewards of the Secret
 description=Stewards of the Secret Hero and Monster Collection for Descent: Journeys in the Dark Second Edition
 image="../../ffg/img/DJ33_StewardsOfTheSecret.dds"
 id=SotS
+type=hm
 
 [ContentPackData]
 heros.ini
