--- a/content/D2E/h&m/toc/content_pack.ini
+++ b/content/D2E/h&m/toc/content_pack.ini
@@ -3,6 +3,7 @@ name=Treaty of Champions
 description=Treaty of Champions Hero and Monster Collection for Descent: Journeys in the Dark Second Edition
 image="../../ffg/img/DJ32_TreatyOfChampions.dds"
 id=ToC
+type=hm
 
 [ContentPackData]
 heros.ini
