--- a/content/D2E/boxed/lor/content_pack.ini
+++ b/content/D2E/boxed/lor/content_pack.ini
@@ -3,6 +3,7 @@ name=Labyrinth of Ruin
 description=Labyrinth of Ruin expansion for Descent: Journeys in the Dark Second Edition
 image="../../ffg/img/DJ04_LabyrinthOfRuin.dds"
 id=LoR
+type=box
 
 [ContentPackData]
 heros.ini
