--- a/content/D2E/boxed/tctr/content_pack.ini
+++ b/content/D2E/boxed/tctr/content_pack.ini
@@ -3,6 +3,7 @@ name=The Chains That Rust
 description=The Chains That Rust expansion for Descent: Journeys in the Dark Second Edition
 image="../../ffg/img/DJ44_ChainsThatRust.dds"
 id=TCTR
+type=box
 
 [ContentPackData]
 tiles.ini
