--- a/content/D2E/boxed/tt/content_pack.ini
+++ b/content/D2E/boxed/tt/content_pack.ini
@@ -3,6 +3,7 @@ name=The Trollfens
 description=The Trollfens expansion for Descent: Journeys in the Dark Second Edition
 image="../../ffg/img/DJ05_TheTrollfens.dds"
 id=TT
+type=box
 
 [ContentPackData]
 heros.ini
