--- a/content/D2E/h&m/cotf/content_pack.ini
+++ b/content/D2E/h&m/cotf/content_pack.ini
@@ -3,6 +3,7 @@ name=Crusade of the Forgotten
 description=Crusade of the Forgotten Hero and Monster Collection for Descent: Journeys in the Dark Second Edition
 image="../../ffg/img/DJ28_CrusadeOfTheForgotten.dds"
 id=CotF
+type=hm
 
 [ContentPackData]
 heros.ini
