--- a/content/D2E/h&m/god/content_pack.ini
+++ b/content/D2E/h&m/god/content_pack.ini
@@ -3,6 +3,7 @@ name=Guardians of Deephall
 description=Guardians of Deephall Hero and Monster Collection for Descent: Journeys in the Dark Second Edition
 image="../../ffg/img/DJ29_GuardiansOfDeephall.dds"
 id=GoD
+type=hm
 
 [ContentPackData]
 heros.ini
