--- a/content/D2E/h&m/soe/content_pack.ini
+++ b/content/D2E/h&m/soe/content_pack.ini
@@ -3,6 +3,7 @@ name=Shards of Everdark
 description=Shards of Everdark Hero and Monster Collection for Descent: Journeys in the Dark Second Edition
 image="../../ffg/img/DJ34_ShardsOfEverdark.dds"
 id=SoE
+type=hm
 
 [ContentPackData]
 heros.ini
