--- a/content/D2E/h&m/vod/content_pack.ini
+++ b/content/D2E/h&m/vod/content_pack.ini
@@ -3,6 +3,7 @@ name=Visions of Dawn
 description=Visions of Dawn Hero and Monster Collection for Descent: Journeys in the Dark Second Edition
 image="../../ffg/img/DJ30-VisionsOfDawn.dds"
 id=VoD
+type=hm
 
 [ContentPackData]
 heros.ini
