Adding support for more sound effects.

--- a/content/D2E/base/audio.ini
+++ b/content/D2E/base/audio.ini
@@ -116,6 +116,7 @@ file="../ffg/audio/MonsterDefeated_01.ogg"
 
 [AudioNewRound]
 file="../ffg/audio/NewRound_01.ogg"
+traits=newround
 
 [AudioPaperSlideIn]
 file="../ffg/audio/PaperSlideIn_01.ogg"
