Fixing up CK content.

--- a/content/D2E/base/content_pack.ini
+++ b/content/D2E/base/content_pack.ini
@@ -10,11 +10,11 @@ image="../ffg/img/DJ07_ShadowOfNerekhall.dds"
 
 [PackTypehm]
 name=Hero and Monster packs
-image=image="../ffg/img/DJ32_TreatyOfChampions.dds"
+image="../ffg/img/DJ32_TreatyOfChampions.dds"
 
 [PackTypeck]
 name=Conversion Kit
-image=image="img/018B.DJ02_Conversion_Kit.png"
+image="img/DJ02_Conversion_Kit.png"
 
 ; Data, all of these files will be read
 ; names are cosmetic, data can be anywhere
