--- a/content/D2E/ck/dq/content_pack.ini
+++ b/content/D2E/ck/dq/content_pack.ini
@@ -1,7 +1,7 @@
 [ContentPack]
 name=Dungeon Quest Heroes
 description=Conversion Kit content for Dungeon Quest Descent Heroes
-image="img/DJ02_Conversion_Kit.png"
+image="img/DQ.png"
 id=CKDQ
 type=ck
 
