--- a/content/D2E/ck/aod/content_pack.ini
+++ b/content/D2E/ck/aod/content_pack.ini
@@ -1,7 +1,7 @@
 [ContentPack]
 name=Descent: Journeys in the Dark Altar of Dispair
 description=Conversion Kit content for Descent: Journeys in the Dark Altar of Dispair Expansion
-image="img/DJ02_Conversion_Kit.png"
+image="img/AoD.png"
 id=CKAoD
 type=ck
 
