--- a/content/D2E/ck/d1e/content_pack.ini
+++ b/content/D2E/ck/d1e/content_pack.ini
@@ -1,7 +1,7 @@
 [ContentPack]
 name=Descent: Journeys in the Dark
 description=Conversion Kit content for Descent: Journeys in the Dark
-image="img/DJ02_Conversion_Kit.png"
+image="img/D1E.png"
 id=CKD1E
 type=ck
 
