--- a/content/D2E/ck/promo/content_pack.ini
+++ b/content/D2E/ck/promo/content_pack.ini
@@ -1,7 +1,7 @@
 [ContentPack]
 name=Promotional Heroes
 description=Conversion Kit content for Promotional Descent Heroes
-image="img/DJ02_Conversion_Kit.png"
+image="img/Promo.png"
 id=CKPromo
 type=ck
 
