--- a/content/D2E/ck/toi/content_pack.ini
+++ b/content/D2E/ck/toi/content_pack.ini
@@ -1,7 +1,7 @@
 [ContentPack]
 name=Descent: Journeys in the Dark Well of Darkness
 description=Conversion Kit content for Descent: Journeys in the Dark Well of Darkness Expansion
-image="img/DJ02_Conversion_Kit.png"
+image="img/ToI.jpg"
 id=CKWoD
 type=ck
 
