--- a/content/D2E/ck/toi/content_pack.ini
+++ b/content/D2E/ck/toi/content_pack.ini
@@ -1,8 +1,8 @@
 [ContentPack]
-name=Descent: Journeys in the Dark Well of Darkness
-description=Conversion Kit content for Descent: Journeys in the Dark Well of Darkness Expansion
+name=Descent: Journeys in the Dark Tomb of Ice
+description=Conversion Kit content for Descent: Journeys in the Dark Tomb of Ice Expansion
 image="img/ToI.jpg"
-id=CKWoD
+id=CKToI
 type=ck
 
 [ContentPackData]
