Adding more effects.

--- a/content/MoM/base/audio.ini
+++ b/content/MoM/base/audio.ini
@@ -267,6 +267,7 @@ file="../ffg/audio/Important_02.ogg"
 
 [AudioInvestigator]
 file="../ffg/audio/Investigator_01.ogg"
+traits=newround
 
 [AudioLocked1]
 file="../ffg/audio/Locked_01.ogg"
@@ -296,6 +297,7 @@ file="../ffg/audio/MobTrashesDock_01.ogg"
 
 [AudioMonsterGeneric1]
 file="../ffg/audio/MonsterGeneric_01.ogg"
+traits=horror
 
 [AudioMonsterGeneric2]
 file="../ffg/audio/MonsterGeneric_02.ogg"
@@ -305,6 +307,7 @@ file="../ffg/audio/MonsterGeneric_03.ogg"
 
 [AudioMonsterGeneric4]
 file="../ffg/audio/MonsterGeneric_04.ogg"
+traits=defeated
 
 [AudioMove1]
 file="../ffg/audio/Move_01.ogg"
