--- a/content/D2E/base/audio.ini
+++ b/content/D2E/base/audio.ini
@@ -113,6 +113,7 @@ file="../ffg/audio/MonsterActivation_01.ogg"
 
 [AudioDefeated]
 file="../ffg/audio/MonsterDefeated_01.ogg"
+traits=defeated
 
 [AudioNewRound]
 file="../ffg/audio/NewRound_01.ogg"
