--- a/content/MoM/base/monsters.ini
+++ b/content/MoM/base/monsters.ini
@@ -21,7 +21,7 @@ image="../ffg/img/Monster_DeepOne.dds"
 ; activation=
 ; Optional health modifier from number of players
 ; health=0
-traits=beast
+traits=humanoid
 
 [MonsterDeepOneHybrid]
 ; Optional name for display (if spaces or other formatting required)
