--- a/content/MoM/cotw/monsters.ini
+++ b/content/MoM/cotw/monsters.ini
@@ -44,7 +44,7 @@ image="../ffg/img/Monster_GoatSpawn.dds"
 ; activation=
 ; Optional health modifier from number of players
 ; health=0
-traits=beast
+traits=humanoid
 
 [MonsterNightgaunt]
 ; Optional name for display (if spaces or other formatting required)
