Supporting feminine mythos events.

--- a/content/MoM/base/mythos.ini
+++ b/content/MoM/base/mythos.ini
@@ -72,7 +72,7 @@ button1="Continue"
 
 ; rank 0.25
 [PerilBackPain]
-text={ffg:MYTHOS_EVENT_BACK_PAIN:{0}:{rnd:hero}}
+text={rnd:hero:{ffg:MYTHOS_EVENT_BACK_PAIN}:{0}:{ffg:MYTHOS_EVENT_BACK_PAIN_ALT}:{0}}
 conditions=mythosMinor,>,0
 event1=
 button1="Continue"
