--- a/content/MoM/base/tokens.ini
+++ b/content/MoM/base/tokens.ini
@@ -87,6 +87,7 @@ x=0
 y=1
 height=248
 width=238
+pps=130
 
 [TokenWhiteWoman]
 image="../ffg/img/SpriteAtlasTexture-ATLAS_FEATURES_CORE (Group 0)-1024x1024-fmt12.dds"
