Fixing secret rooms.

--- a/content/D2E/boxed/lotw/tiles.ini
+++ b/content/D2E/boxed/lotw/tiles.ini
@@ -77,7 +77,7 @@ reverse=TileSide35A
 top=72
 left=72
 pps=72
-image="img/0S1A.png"
+image="img/S1A.png"
 traits=outside
 reverse=TileSideS1B
 
@@ -85,6 +85,6 @@ reverse=TileSideS1B
 top=72
 left=72
 pps=72
-image="img/0S1B.png"
+image="img/S1B.png"
 traits=inside
 reverse=TileSideS1A
