--- a/content/D2E/boxed/mor/monsters.ini
+++ b/content/D2E/boxed/mor/monsters.ini
@@ -11,5 +11,4 @@ traits=ranged wilderness building small
 image="../../ffg/img/Monster_Wraith.dds"
 info={ffg:INSTRUCTION_WRAITH}
 traits=ranged civilized cursed small
-; fixme unknown?
-;activation=Range1 Range2 Range3
+activation=Range1 Range2 Range3
