Fixing monster activations (MoM) #220

--- a/content/MoM/base/activations.ini
+++ b/content/MoM/base/activations.ini
@@ -393,122 +393,146 @@ movebutton={ffg:UI_NOT_IN_SPACE}
 [MonsterActivationCrawlingOne01]
 ability={ffg:MONSTER_CRAWLING_ONE_MOVE_01}
 master={ffg:MONSTER_CRAWLING_ONE_ATTACK_01}
-movebutton={ffg:UI_NOT_IN_RANGE}
+movebutton={ffg:UI_NOT_IN_SPACE}
+move={ffg:MONSTER_COMMON_MOVE_01}
 
 [MonsterActivationCrawlingOne02]
 ability={ffg:MONSTER_CRAWLING_ONE_MOVE_02}
 master={ffg:MONSTER_CRAWLING_ONE_ATTACK_02}
-movebutton={ffg:UI_NOT_IN_RANGE}
+movebutton={ffg:UI_NOT_IN_SPACE}
+move={ffg:MONSTER_COMMON_MOVE_01}
 
 [MonsterActivationCrawlingOne03]
 ability={ffg:MONSTER_CRAWLING_ONE_MOVE_03}
 master={ffg:MONSTER_CRAWLING_ONE_ATTACK_03}
-movebutton={ffg:UI_NOT_IN_RANGE}
+movebutton={ffg:UI_NOT_IN_SPACE}
+move={ffg:MONSTER_COMMON_MOVE_01}
 
 [MonsterActivationCrawlingOne04]
 ability={ffg:MONSTER_CRAWLING_ONE_MOVE_04}
 master={ffg:MONSTER_CRAWLING_ONE_ATTACK_04}
-movebutton={ffg:UI_NOT_IN_RANGE}
+movebutton={ffg:UI_NOT_IN_SPACE}
+move={ffg:MONSTER_COMMON_MOVE_01}
 
 [MonsterActivationCrawlingOne05]
 ability={ffg:MONSTER_CRAWLING_ONE_MOVE_05}
 master={ffg:MONSTER_CRAWLING_ONE_ATTACK_05}
-movebutton={ffg:UI_NOT_IN_RANGE}
+movebutton={ffg:UI_NOT_IN_SPACE}
+move={ffg:MONSTER_COMMON_MOVE_01}
 
 [MonsterActivationCrawlingOne06]
 ability={ffg:MONSTER_CRAWLING_ONE_MOVE_06}
 master={ffg:MONSTER_CRAWLING_ONE_ATTACK_06}
-movebutton={ffg:UI_NOT_IN_RANGE}
+movebutton={ffg:UI_NOT_IN_SPACE}
+move={ffg:MONSTER_COMMON_MOVE_01}
 
 [MonsterActivationCrawlingOne07]
 ability={ffg:MONSTER_CRAWLING_ONE_MOVE_07}
 master={ffg:MONSTER_CRAWLING_ONE_ATTACK_07}
-movebutton={ffg:UI_NOT_IN_RANGE}
+movebutton={ffg:UI_NOT_IN_SPACE}
+move={ffg:MONSTER_COMMON_MOVE_01}
 
 [MonsterActivationCrawlingOne08]
 ability={ffg:MONSTER_CRAWLING_ONE_MOVE_08}
 master={ffg:MONSTER_CRAWLING_ONE_ATTACK_08}
-movebutton={ffg:UI_NOT_IN_RANGE}
+movebutton={ffg:UI_NOT_IN_SPACE}
+move={ffg:MONSTER_COMMON_MOVE_01}
 
 [MonsterActivationCrawlingOne09]
 ability={ffg:MONSTER_CRAWLING_ONE_MOVE_09}
 master={ffg:MONSTER_CRAWLING_ONE_ATTACK_09}
 movebutton={ffg:UI_NOT_IN_RANGE}
+move={ffg:MONSTER_COMMON_MOVE_01}
 
 [MonsterActivationCrawlingOne10]
 ability={ffg:MONSTER_CRAWLING_ONE_MOVE_10}
 master={ffg:MONSTER_CRAWLING_ONE_ATTACK_10}
-movebutton={ffg:UI_NOT_IN_RANGE}
+movebutton={ffg:UI_NOT_IN_SPACE}
+move={ffg:MONSTER_COMMON_MOVE_01}
 
 [MonsterActivationCrawlingOne11]
 ability={ffg:MONSTER_CRAWLING_ONE_MOVE_11}
 master={ffg:MONSTER_CRAWLING_ONE_ATTACK_11}
-movebutton={ffg:UI_NOT_IN_RANGE}
+movebutton={ffg:UI_NOT_IN_SPACE}
+move={ffg:MONSTER_COMMON_MOVE_01}
 
 [MonsterActivationCrawlingOne12]
 ability={ffg:MONSTER_CRAWLING_ONE_MOVE_12}
 master={ffg:MONSTER_CRAWLING_ONE_ATTACK_12}
-movebutton={ffg:UI_NOT_IN_RANGE}
+movebutton={ffg:UI_NOT_IN_SPACE}
+move={ffg:MONSTER_COMMON_MOVE_01}
 
 [MonsterActivationCrawlingOne13]
 ability={ffg:MONSTER_CRAWLING_ONE_MOVE_13}
 master={ffg:MONSTER_CRAWLING_ONE_ATTACK_13}
-movebutton={ffg:UI_NOT_IN_RANGE}
+movebutton={ffg:UI_NOT_IN_SPACE}
+move={ffg:MONSTER_COMMON_MOVE_01}
 
 [MonsterActivationCrawlingOne14]
 ability={ffg:MONSTER_CRAWLING_ONE_MOVE_14}
 master={ffg:MONSTER_CRAWLING_ONE_ATTACK_14}
-movebutton={ffg:UI_NOT_IN_RANGE}
+movebutton={ffg:UI_NOT_IN_SPACE}
+move={ffg:MONSTER_COMMON_MOVE_01}
 
 [MonsterActivationCrawlingOne15]
 ability={ffg:MONSTER_CRAWLING_ONE_MOVE_15}
 master={ffg:MONSTER_CRAWLING_ONE_ATTACK_15}
-movebutton={ffg:UI_NOT_IN_RANGE}
+movebutton={ffg:UI_NOT_IN_SPACE}
+move={ffg:MONSTER_COMMON_MOVE_01}
 
 [MonsterActivationCrawlingOne16]
 ability={ffg:MONSTER_CRAWLING_ONE_MOVE_16}
 master={ffg:MONSTER_CRAWLING_ONE_ATTACK_16}
-movebutton={ffg:UI_NOT_IN_RANGE}
+movebutton={ffg:UI_NOT_IN_SPACE}
+move={ffg:MONSTER_COMMON_MOVE_01}
 
 [MonsterActivationCrawlingOne17]
 ability={ffg:MONSTER_CRAWLING_ONE_MOVE_17}
 master={ffg:MONSTER_CRAWLING_ONE_ATTACK_17}
-movebutton={ffg:UI_NOT_IN_RANGE}
+movebutton={ffg:UI_NOT_IN_SPACE}
+move={ffg:MONSTER_COMMON_MOVE_01}
 
 [MonsterActivationCrawlingOne18]
 ability={ffg:MONSTER_CRAWLING_ONE_MOVE_18}
 master={ffg:MONSTER_CRAWLING_ONE_ATTACK_18}
-movebutton={ffg:UI_NOT_IN_RANGE}
+movebutton={ffg:UI_NOT_IN_SPACE}
+move={ffg:MONSTER_COMMON_MOVE_01}
 
 [MonsterActivationCrawlingOne19]
 ability={ffg:MONSTER_CRAWLING_ONE_MOVE_19}
 master={ffg:MONSTER_CRAWLING_ONE_ATTACK_19}
-movebutton={ffg:UI_NOT_IN_RANGE}
+movebutton={ffg:UI_NOT_IN_SPACE}
+move={ffg:MONSTER_COMMON_MOVE_01}
 
 [MonsterActivationCrawlingOne20]
 ability={ffg:MONSTER_CRAWLING_ONE_MOVE_20}
 master={ffg:MONSTER_CRAWLING_ONE_ATTACK_20}
-movebutton={ffg:UI_NOT_IN_RANGE}
+movebutton={ffg:UI_NOT_IN_SPACE}
+move={ffg:MONSTER_COMMON_MOVE_01}
 
 [MonsterActivationCrawlingOne21]
 ability={ffg:MONSTER_CRAWLING_ONE_MOVE_21}
 master={ffg:MONSTER_CRAWLING_ONE_ATTACK_21}
-movebutton={ffg:UI_NOT_IN_RANGE}
+movebutton={ffg:UI_NOT_IN_SPACE}
+move={ffg:MONSTER_COMMON_MOVE_01}
 
 [MonsterActivationCrawlingOne22]
 ability={ffg:MONSTER_CRAWLING_ONE_MOVE_22}
 master={ffg:MONSTER_CRAWLING_ONE_ATTACK_22}
-movebutton={ffg:UI_NOT_IN_RANGE}
+movebutton={ffg:UI_NOT_IN_SPACE}
+move={ffg:MONSTER_COMMON_MOVE_01}
 
 [MonsterActivationCrawlingOne23]
 ability={ffg:MONSTER_CRAWLING_ONE_MOVE_23}
 master={ffg:MONSTER_CRAWLING_ONE_ATTACK_23}
-movebutton={ffg:UI_NOT_IN_RANGE}
+movebutton={ffg:UI_NOT_IN_SPACE}
+move={ffg:MONSTER_COMMON_MOVE_01}
 
 [MonsterActivationCrawlingOne24]
 ability={ffg:MONSTER_CRAWLING_ONE_MOVE_24}
 master={ffg:MONSTER_CRAWLING_ONE_ATTACK_24}
-movebutton={ffg:UI_NOT_IN_RANGE}
+movebutton={ffg:UI_NOT_IN_SPACE}
+move={ffg:MONSTER_COMMON_MOVE_01}
 
 [MonsterActivationCthonian01]
 ability={ffg:MONSTER_CTHONIAN_MOVE_01}
@@ -2578,17 +2602,20 @@ move={ffg:MONSTER_COMMON_MOVE_02}
 [MonsterActivationShoggoth01]
 ability={ffg:MONSTER_SHOGGOTH_MOVE_01}
 master={ffg:MONSTER_SHOGGOTH_ATTACK_01}
-movebutton={ffg:UI_NOT_IN_RANGE}
+movebutton={ffg:UI_NOT_IN_SPACE}
+move={ffg:MONSTER_COMMON_MOVE_02}
 
 [MonsterActivationShoggoth02]
 ability={ffg:MONSTER_SHOGGOTH_MOVE_02}
 master={ffg:MONSTER_SHOGGOTH_ATTACK_02}
-movebutton={ffg:UI_NOT_IN_RANGE}
+movebutton={ffg:UI_NOT_IN_SPACE}
+move={ffg:MONSTER_COMMON_MOVE_02}
 
 [MonsterActivationShoggoth03]
 ability={ffg:MONSTER_SHOGGOTH_MOVE_03}
 master={ffg:MONSTER_SHOGGOTH_ATTACK_03}
-movebutton={ffg:UI_NOT_IN_RANGE}
+movebutton={ffg:UI_NOT_IN_SPACE}
+move={ffg:MONSTER_COMMON_MOVE_02}
 
 [MonsterActivationShoggoth04]
 ability={ffg:MONSTER_SHOGGOTH_MOVE_04}
@@ -2599,102 +2626,122 @@ move={ffg:MONSTER_COMMON_MOVE_03}
 [MonsterActivationShoggoth05]
 ability={ffg:MONSTER_SHOGGOTH_MOVE_05}
 master={ffg:MONSTER_SHOGGOTH_ATTACK_05}
-movebutton={ffg:UI_NOT_IN_RANGE}
+movebutton={ffg:UI_NOT_IN_SPACE}
+move={ffg:MONSTER_COMMON_MOVE_02}
 
 [MonsterActivationShoggoth06]
 ability={ffg:MONSTER_SHOGGOTH_MOVE_06}
 master={ffg:MONSTER_SHOGGOTH_ATTACK_06}
-movebutton={ffg:UI_NOT_IN_RANGE}
+movebutton={ffg:UI_NOT_IN_SPACE}
+move={ffg:MONSTER_COMMON_MOVE_02}
 
 [MonsterActivationShoggoth07]
 ability={ffg:MONSTER_SHOGGOTH_MOVE_07}
 master={ffg:MONSTER_SHOGGOTH_ATTACK_07}
-movebutton={ffg:UI_NOT_IN_RANGE}
+movebutton={ffg:UI_NOT_IN_SPACE}
+move={ffg:MONSTER_COMMON_MOVE_02}
 
 [MonsterActivationShoggoth08]
 ability={ffg:MONSTER_SHOGGOTH_MOVE_08}
 master={ffg:MONSTER_SHOGGOTH_ATTACK_08}
-movebutton={ffg:UI_NOT_IN_RANGE}
+movebutton={ffg:UI_NOT_IN_SPACE}
+move={ffg:MONSTER_COMMON_MOVE_02}
 
 [MonsterActivationShoggoth09]
 ability={ffg:MONSTER_SHOGGOTH_MOVE_09}
 master={ffg:MONSTER_SHOGGOTH_ATTACK_09}
-movebutton={ffg:UI_NOT_IN_RANGE}
+movebutton={ffg:UI_NOT_IN_SPACE}
+move={ffg:MONSTER_COMMON_MOVE_02}
 
 [MonsterActivationShoggoth10]
 ability={ffg:MONSTER_SHOGGOTH_MOVE_10}
 master={ffg:MONSTER_SHOGGOTH_ATTACK_10}
-movebutton={ffg:UI_NOT_IN_RANGE}
+movebutton={ffg:UI_NOT_IN_SPACE}
+move={ffg:MONSTER_COMMON_MOVE_02}
 
 [MonsterActivationShoggoth11]
 ability={ffg:MONSTER_SHOGGOTH_MOVE_11}
 master={ffg:MONSTER_SHOGGOTH_ATTACK_11}
-movebutton={ffg:UI_NOT_IN_RANGE}
+movebutton={ffg:UI_NOT_IN_SPACE}
+move={ffg:MONSTER_COMMON_MOVE_02}
 
 [MonsterActivationShoggoth12]
 ability={ffg:MONSTER_SHOGGOTH_MOVE_12}
 master={ffg:MONSTER_SHOGGOTH_ATTACK_12}
-movebutton={ffg:UI_NOT_IN_RANGE}
+movebutton={ffg:UI_NOT_IN_SPACE}
+move={ffg:MONSTER_COMMON_MOVE_02}
 
 [MonsterActivationShoggoth13]
 ability={ffg:MONSTER_SHOGGOTH_MOVE_13}
 master={ffg:MONSTER_SHOGGOTH_ATTACK_13}
-movebutton={ffg:UI_NOT_IN_RANGE}
+movebutton={ffg:UI_NOT_IN_SPACE}
+move={ffg:MONSTER_COMMON_MOVE_02}
 
 [MonsterActivationShoggoth14]
 ability={ffg:MONSTER_SHOGGOTH_MOVE_14}
 master={ffg:MONSTER_SHOGGOTH_ATTACK_14}
-movebutton={ffg:UI_NOT_IN_RANGE}
+movebutton={ffg:UI_NOT_IN_SPACE}
+move={ffg:MONSTER_COMMON_MOVE_02}
 
 [MonsterActivationShoggoth15]
 ability={ffg:MONSTER_SHOGGOTH_MOVE_15}
 master={ffg:MONSTER_SHOGGOTH_ATTACK_15}
-movebutton={ffg:UI_NOT_IN_RANGE}
+movebutton={ffg:UI_NOT_IN_SPACE}
+move={ffg:MONSTER_COMMON_MOVE_02}
 
 [MonsterActivationShoggoth16]
 ability={ffg:MONSTER_SHOGGOTH_MOVE_16}
 master={ffg:MONSTER_SHOGGOTH_ATTACK_16}
-movebutton={ffg:UI_NOT_IN_RANGE}
+movebutton={ffg:UI_NOT_IN_SPACE}
+move={ffg:MONSTER_COMMON_MOVE_02}
 
 [MonsterActivationShoggoth17]
 ability={ffg:MONSTER_SHOGGOTH_MOVE_17}
 master={ffg:MONSTER_SHOGGOTH_ATTACK_17}
-movebutton={ffg:UI_NOT_IN_RANGE}
+movebutton={ffg:UI_NOT_IN_SPACE}
+move={ffg:MONSTER_COMMON_MOVE_02}
 
 [MonsterActivationShoggoth18]
 ability={ffg:MONSTER_SHOGGOTH_MOVE_18}
 master={ffg:MONSTER_SHOGGOTH_ATTACK_18}
-movebutton={ffg:UI_NOT_IN_RANGE}
+movebutton={ffg:UI_NOT_IN_SPACE}
+move={ffg:MONSTER_COMMON_MOVE_02}
 
 [MonsterActivationShoggoth19]
 ability={ffg:MONSTER_SHOGGOTH_MOVE_19}
 master={ffg:MONSTER_SHOGGOTH_ATTACK_19}
-movebutton={ffg:UI_NOT_IN_RANGE}
+movebutton={ffg:UI_NOT_IN_SPACE}
+move={ffg:MONSTER_COMMON_MOVE_02}
 
 [MonsterActivationShoggoth20]
 ability={ffg:MONSTER_SHOGGOTH_MOVE_20}
 master={ffg:MONSTER_SHOGGOTH_ATTACK_20}
-movebutton={ffg:UI_NOT_IN_RANGE}
+movebutton={ffg:UI_NOT_IN_SPACE}
+move={ffg:MONSTER_COMMON_MOVE_02}
 
 [MonsterActivationShoggoth21]
 ability={ffg:MONSTER_SHOGGOTH_MOVE_21}
 master={ffg:MONSTER_SHOGGOTH_ATTACK_21}
-movebutton={ffg:UI_NOT_IN_RANGE}
+movebutton={ffg:UI_NOT_IN_SPACE}
+move={ffg:MONSTER_COMMON_MOVE_02}
 
 [MonsterActivationShoggoth22]
 ability={ffg:MONSTER_SHOGGOTH_MOVE_22}
 master={ffg:MONSTER_SHOGGOTH_ATTACK_22}
-movebutton={ffg:UI_NOT_IN_RANGE}
+movebutton={ffg:UI_NOT_IN_SPACE}
+move={ffg:MONSTER_COMMON_MOVE_02}
 
 [MonsterActivationShoggoth23]
 ability={ffg:MONSTER_SHOGGOTH_MOVE_23}
 master={ffg:MONSTER_SHOGGOTH_ATTACK_23}
-movebutton={ffg:UI_NOT_IN_RANGE}
+movebutton={ffg:UI_NOT_IN_SPACE}
+move={ffg:MONSTER_COMMON_MOVE_02}
 
 [MonsterActivationShoggoth24]
 ability={ffg:MONSTER_SHOGGOTH_MOVE_24}
 master={ffg:MONSTER_SHOGGOTH_ATTACK_24}
-movebutton={ffg:UI_NOT_IN_RANGE}
+movebutton={ffg:UI_NOT_IN_SPACE}
+move={ffg:MONSTER_COMMON_MOVE_02}
 
 [MonsterActivationStarSpawn01]
 ability={ffg:MONSTER_STAR_SPAWN_MOVE_01}
@@ -3103,85 +3150,85 @@ move={ffg:MONSTER_COMMON_MOVE_02}
 [MonsterActivationZombie01]
 ability={ffg:MONSTER_ZOMBIE_MOVE_01}
 master={ffg:MONSTER_ZOMBIE_ATTACK_01}
-movebutton={ffg:UI_NOT_IN_RANGE}
+movebutton={ffg:UI_NOT_IN_SPACE}
 move={ffg:MONSTER_COMMON_MOVE_01}
 
 [MonsterActivationZombie02]
 ability={ffg:MONSTER_ZOMBIE_MOVE_02}
 master={ffg:MONSTER_ZOMBIE_ATTACK_02}
-movebutton={ffg:UI_NOT_IN_RANGE}
+movebutton={ffg:UI_NOT_IN_SPACE}
 move={ffg:MONSTER_COMMON_MOVE_01}
 
 [MonsterActivationZombie03]
 ability={ffg:MONSTER_ZOMBIE_MOVE_03}
 master={ffg:MONSTER_ZOMBIE_ATTACK_03}
-movebutton={ffg:UI_NOT_IN_RANGE}
+movebutton={ffg:UI_NOT_IN_SPACE}
 move={ffg:MONSTER_COMMON_MOVE_01}
 
 [MonsterActivationZombie04]
 ability={ffg:MONSTER_ZOMBIE_MOVE_04}
 master={ffg:MONSTER_ZOMBIE_ATTACK_04}
-movebutton={ffg:UI_NOT_IN_RANGE}
+movebutton={ffg:UI_NOT_IN_SPACE}
 move={ffg:MONSTER_COMMON_MOVE_01}
 
 [MonsterActivationZombie05]
 ability={ffg:MONSTER_ZOMBIE_MOVE_05}
 master={ffg:MONSTER_ZOMBIE_ATTACK_05}
-movebutton={ffg:UI_NOT_IN_RANGE}
+movebutton={ffg:UI_NOT_IN_SPACE}
 move={ffg:MONSTER_COMMON_MOVE_01}
 
 [MonsterActivationZombie06]
 ability={ffg:MONSTER_ZOMBIE_MOVE_06}
 master={ffg:MONSTER_ZOMBIE_ATTACK_06}
-movebutton={ffg:UI_NOT_IN_RANGE}
+movebutton={ffg:UI_NOT_IN_SPACE}
 move={ffg:MONSTER_COMMON_MOVE_01}
 
 [MonsterActivationZombie07]
 ability={ffg:MONSTER_ZOMBIE_MOVE_07}
 master={ffg:MONSTER_ZOMBIE_ATTACK_07}
-movebutton={ffg:UI_NOT_IN_RANGE}
+movebutton={ffg:UI_NOT_IN_SPACE}
 move={ffg:MONSTER_COMMON_MOVE_01}
 
 [MonsterActivationZombie08]
 ability={ffg:MONSTER_ZOMBIE_MOVE_08}
 master={ffg:MONSTER_ZOMBIE_ATTACK_08}
-movebutton={ffg:UI_NOT_IN_RANGE}
+movebutton={ffg:UI_NOT_IN_SPACE}
 move={ffg:MONSTER_COMMON_MOVE_01}
 
 [MonsterActivationZombie09]
 ability={ffg:MONSTER_ZOMBIE_MOVE_09}
 master={ffg:MONSTER_ZOMBIE_ATTACK_09}
-movebutton={ffg:UI_NOT_IN_RANGE}
-move={ffg:MONSTER_COMMON_MOVE_01}
+movebutton={ffg:UI_NOT_IN_SPACE}
+move={ffg:MONSTER_COMMON_MOVE_02}
 
 [MonsterActivationZombie10]
 ability={ffg:MONSTER_ZOMBIE_MOVE_10}
 master={ffg:MONSTER_ZOMBIE_ATTACK_10}
-movebutton={ffg:UI_NOT_IN_RANGE}
+movebutton={ffg:UI_NOT_IN_SPACE}
 move={ffg:MONSTER_COMMON_MOVE_01}
 
 [MonsterActivationZombie11]
 ability={ffg:MONSTER_ZOMBIE_MOVE_11}
 master={ffg:MONSTER_ZOMBIE_ATTACK_11}
-movebutton={ffg:UI_NOT_IN_RANGE}
+movebutton={ffg:UI_NOT_IN_SPACE}
 move={ffg:MONSTER_COMMON_MOVE_01}
 
 [MonsterActivationZombie12]
 ability={ffg:MONSTER_ZOMBIE_MOVE_12}
 master={ffg:MONSTER_ZOMBIE_ATTACK_12}
-movebutton={ffg:UI_NOT_IN_RANGE}
+movebutton={ffg:UI_NOT_IN_SPACE}
 move={ffg:MONSTER_COMMON_MOVE_01}
 
 [MonsterActivationZombie13]
 ability={ffg:MONSTER_ZOMBIE_MOVE_13}
 master={ffg:MONSTER_ZOMBIE_ATTACK_13}
-movebutton={ffg:UI_NOT_IN_RANGE}
+movebutton={ffg:UI_NOT_IN_SPACE}
 move={ffg:MONSTER_COMMON_MOVE_01}
 
 [MonsterActivationZombie14]
 ability={ffg:MONSTER_ZOMBIE_MOVE_14}
 master={ffg:MONSTER_ZOMBIE_ATTACK_14}
-movebutton={ffg:UI_NOT_IN_RANGE}
+movebutton={ffg:UI_NOT_IN_SPACE}
 move={ffg:MONSTER_COMMON_MOVE_01}
 
 [MonsterActivationZombie15]
@@ -3193,55 +3240,55 @@ move={ffg:MONSTER_COMMON_MOVE_02}
 [MonsterActivationZombie16]
 ability={ffg:MONSTER_ZOMBIE_MOVE_16}
 master={ffg:MONSTER_ZOMBIE_ATTACK_16}
-movebutton={ffg:UI_NOT_IN_RANGE}
+movebutton={ffg:UI_NOT_IN_SPACE}
 move={ffg:MONSTER_COMMON_MOVE_01}
 
 [MonsterActivationZombie17]
 ability={ffg:MONSTER_ZOMBIE_MOVE_17}
 master={ffg:MONSTER_ZOMBIE_ATTACK_17}
-movebutton={ffg:UI_NOT_IN_RANGE}
+movebutton={ffg:UI_NOT_IN_SPACE}
 move={ffg:MONSTER_COMMON_MOVE_01}
 
 [MonsterActivationZombie18]
 ability={ffg:MONSTER_ZOMBIE_MOVE_18}
 master={ffg:MONSTER_ZOMBIE_ATTACK_18}
-movebutton={ffg:UI_NOT_IN_RANGE}
+movebutton={ffg:UI_NOT_IN_SPACE}
 move={ffg:MONSTER_COMMON_MOVE_01}
 
 [MonsterActivationZombie19]
 ability={ffg:MONSTER_ZOMBIE_MOVE_19}
 master={ffg:MONSTER_ZOMBIE_ATTACK_19}
-movebutton={ffg:UI_NOT_IN_RANGE}
+movebutton={ffg:UI_NOT_IN_SPACE}
 move={ffg:MONSTER_COMMON_MOVE_01}
 
 [MonsterActivationZombie20]
 ability={ffg:MONSTER_ZOMBIE_MOVE_20}
 master={ffg:MONSTER_ZOMBIE_ATTACK_20}
-movebutton={ffg:UI_NOT_IN_RANGE}
+movebutton={ffg:UI_NOT_IN_SPACE}
 move={ffg:MONSTER_COMMON_MOVE_01}
 
 [MonsterActivationZombie21]
 ability={ffg:MONSTER_ZOMBIE_MOVE_21}
 master={ffg:MONSTER_ZOMBIE_ATTACK_21}
-movebutton={ffg:UI_NOT_IN_RANGE}
+movebutton={ffg:UI_NOT_IN_SPACE}
 move={ffg:MONSTER_COMMON_MOVE_01}
 
 [MonsterActivationZombie22]
 ability={ffg:MONSTER_ZOMBIE_MOVE_22}
 master={ffg:MONSTER_ZOMBIE_ATTACK_22}
-movebutton={ffg:UI_NOT_IN_RANGE}
+movebutton={ffg:UI_NOT_IN_SPACE}
 move={ffg:MONSTER_COMMON_MOVE_01}
 
 [MonsterActivationZombie23]
 ability={ffg:MONSTER_ZOMBIE_MOVE_23}
 master={ffg:MONSTER_ZOMBIE_ATTACK_23}
-movebutton={ffg:UI_NOT_IN_RANGE}
+movebutton={ffg:UI_NOT_IN_SPACE}
 move={ffg:MONSTER_COMMON_MOVE_01}
 
 [MonsterActivationZombie24]
 ability={ffg:MONSTER_ZOMBIE_MOVE_24}
 master={ffg:MONSTER_ZOMBIE_ATTACK_24}
-movebutton={ffg:UI_NOT_IN_RANGE}
+movebutton={ffg:UI_NOT_IN_SPACE}
 move={ffg:MONSTER_COMMON_MOVE_01}
 
 [MonsterActivationThrall01]
