Arachyura activation details.

--- a/content/D2E/boxed/lor/activations.ini
+++ b/content/D2E/boxed/lor/activations.ini
@@ -52,23 +52,23 @@ ability={ffg:EFFECT_CARRION_DRAKE_3}
 minion={ffg:CARRION_DRAKE_3_MINION_0}
 master={ffg:CARRION_DRAKE_3_MASTER_0}
 
-; fixme minion first?
 [MonsterActivationArachyura1]
 ability={ffg:EFFECT_ARACHYURA_1}
 minion={ffg:ARACHYURA_1_MINION_0}
 master={ffg:ARACHYURA_1_MASTER_0}
+masterfirst=true
 
-; fixme minion first?
 [MonsterActivationArachyura2]
 ability={ffg:EFFECT_ARACHYURA_2}
 minion={ffg:ARACHYURA_2_MINION_0}
 master={ffg:ARACHYURA_2_MASTER_0}
+masterfirst=true
 
-; fixme minion first?
 [MonsterActivationArachyura3]
 ability={ffg:EFFECT_ARACHYURA_3}
 minion={ffg:ARACHYURA_3_MINION_0}
 master={ffg:ARACHYURA_3_MASTER_0}
+minionfirst=true
 
 ; fixme minion first?
 [MonsterActivationChangeling3]
