--- a/content/D2E/boxed/lor/monsters.ini
+++ b/content/D2E/boxed/lor/monsters.ini
@@ -27,5 +27,4 @@ traits=melee water dark small
 image="../../ffg/img/Monster_Arachyura.dds"
 info={ffg:INSTRUCTION_ARACHYRUA}
 traits=melee wilderness cursed huge
-; fixme unknown?
-;activation=Range1 Range2 Range3
+activation=Brawler1 Brawler2 Brawler3
