Adding activation details for bane spiders, dark priests, shambling colossus, dispossessed.

--- a/content/D2E/boxed/son/activations.ini
+++ b/content/D2E/boxed/son/activations.ini
@@ -64,11 +64,11 @@ ability={ffg:EFFECT_YNFERNAEL_HULK_3}
 minion={ffg:YNFERNAEL_HULK_3_MINION_0}
 master={ffg:YNFERNAEL_HULK_3_MASTER_0}
 
-; fixme minion first?
-[MonsterActivationShamblingColossusSoN]
-ability={ffg:EFFECT_SHAMBLING_COLOSSUS_NEREKHALL}
-minion={ffg:SHAMBLING_COLOSSUS_NEREKHALL_MINION_0}
-master={ffg:SHAMBLING_COLOSSUS_NEREKHALL_MASTER_0}
+; unused?
+;[MonsterActivationShamblingColossusSoN]
+;ability={ffg:EFFECT_SHAMBLING_COLOSSUS_NEREKHALL}
+;minion={ffg:SHAMBLING_COLOSSUS_NEREKHALL_MINION_0}
+;master={ffg:SHAMBLING_COLOSSUS_NEREKHALL_MASTER_0}
 
 ; fixme minion first?
 [MonsterActivationVolucrixReaver4]
