--- a/content/D2E/boxed/tctr/monsters.ini
+++ b/content/D2E/boxed/tctr/monsters.ini
@@ -11,8 +11,6 @@ name="The Dispossessed"
 image="../../ffg/img/Monster_Dispossessed.dds"
 info={ffg:INSTRUCTION_DISPOSSESSED}
 traits=melee cursed civilized small
-; fixme unknown?
-;activation=Range1 Range2 Range3
 
 [MonsterShamblingColossus]
 name="Shambling Colossus"
@@ -20,5 +18,5 @@ image="../../ffg/img/Monster_ShamblingColossus.dds"
 info={ffg:INSTRUCTION_SHAMBLING_COLOSSUS}
 traits=melee cursed wilderness medium
 ; fixme unknown?
-;activation=Range1 Range2 Range3
+activation=Brawler1 Brawler2 Brawler3
 imageplace="../../ffg/img/Monster_ShamblingColossus_Placement.dds"
