--- a/content/D2E/ck/aod/activations.ini
+++ b/content/D2E/ck/aod/activations.ini
@@ -16,23 +16,23 @@ ability={ffg:EFFECT_CHAOS_BEAST_3}
 minion={ffg:CHAOS_BEAST_3_MINION_0}
 master={ffg:CHAOS_BEAST_3_MASTER_0}
 
-; fixme minion first?
 [MonsterActivationDarkPriest1]
 ability={ffg:EFFECT_DARK_PRIEST_1}
 minion={ffg:DARK_PRIEST_1_MINION_0}
 master={ffg:DARK_PRIEST_1_MASTER_0}
+minionfirst=true
 
-; fixme minion first?
 [MonsterActivationDarkPriest2]
 ability={ffg:EFFECT_DARK_PRIEST_2}
 minion={ffg:DARK_PRIEST_2_MINION_0}
 master={ffg:DARK_PRIEST_2_MASTER_0}
+minionfirst=true
 
-; fixme minion first?
 [MonsterActivationDarkPriest3]
 ability={ffg:EFFECT_DARK_PRIEST_3}
 minion={ffg:DARK_PRIEST_3_MINION_0}
 master={ffg:DARK_PRIEST_3_MASTER_0}
+masterfirst=true
 
 ; fixme minion first?
 [MonsterActivationTroll1]
