--- a/content/D2E/h&m/god/monsters.ini
+++ b/content/D2E/h&m/god/monsters.ini
@@ -12,8 +12,7 @@ name="Dark Priest"
 image="../../ffg/img/Monster_DarkPriest.dds"
 info={ffg:INSTRUCTION_DARK_PRIEST}
 traits=ranged civilized cursed small
-; fixme unknown?
-;activation=Range1 Range2 Range3
+activation=Range1 Range2 Range3
 
 [MonsterWendigo]
 ; name=""
