--- a/content/D2E/h&m/ooto/activations.ini
+++ b/content/D2E/h&m/ooto/activations.ini
@@ -34,20 +34,20 @@ ability={ffg:EFFECT_BEASTMAN_3}
 minion={ffg:BEASTMAN_3_MINION_0}
 master={ffg:BEASTMAN_3_MASTER_0}
 
-; fixme minion first?
 [MonsterActivationBaneSpider1]
 ability={ffg:EFFECT_BANE_SPIDER_1}
 minion={ffg:BANE_SPIDER_1_MINION_0}
 master={ffg:BANE_SPIDER_1_MASTER_0}
+minionfirst=true
 
-; fixme minion first?
 [MonsterActivationBaneSpider2]
 ability={ffg:EFFECT_BANE_SPIDER_2}
 minion={ffg:BANE_SPIDER_2_MINION_0}
 master={ffg:BANE_SPIDER_2_MASTER_0}
+masterfirst=true
 
-; fixme minion first?
 [MonsterActivationBaneSpider3]
 ability={ffg:EFFECT_BANE_SPIDER_3}
 minion={ffg:BANE_SPIDER_3_MINION_0}
 master={ffg:BANE_SPIDER_3_MASTER_0}
+masterfirst=true
