--- a/content/D2E/boxed/mor/activations.ini
+++ b/content/D2E/boxed/mor/activations.ini
@@ -34,17 +34,17 @@ minion={ffg:WRAITH_3_MINION_0}
 master={ffg:WRAITH_3_MASTER_0}
 masterfirst=true
 
-; fixme minion first?
-[MonsterActivationShamblingColossusMoR]
-ability={ffg:EFFECT_SHAMBLING_COLOSSUS_RAVENS}
-minion={ffg:SHAMBLING_COLOSSUS_RAVENS_MINION_0}
-master={ffg:SHAMBLING_COLOSSUS_RAVENS_MASTER_0}
+; unused?
+;[MonsterActivationShamblingColossusMoR]
+;ability={ffg:EFFECT_SHAMBLING_COLOSSUS_RAVENS}
+;minion={ffg:SHAMBLING_COLOSSUS_RAVENS_MINION_0}
+;master={ffg:SHAMBLING_COLOSSUS_RAVENS_MASTER_0}
 
-; fixme minion first?
 [MonsterActivationDarkPriest4]
 ability={ffg:EFFECT_DARK_PRIEST_4}
 minion={ffg:DARK_PRIEST_4_MINION_0}
 master={ffg:DARK_PRIEST_4_MASTER_0}
+minionfirst=true
 
 ; fixme minion first?
 [MonsterActivationDarkMinotaur4]
