--- a/content/D2E/h&m/ooto/monsters.ini
+++ b/content/D2E/h&m/ooto/monsters.ini
@@ -20,4 +20,4 @@ image="../../ffg/img/Monster_BaneSpider.dds"
 info={ffg:INSTRUCTION_BANE_SPIDER}
 traits=ranged dark cave huge
 ; fixme unknown?
-;activation=Range1 Range2 Range3
+activation=Range1 Range2 Range3
